# hotkeys-win

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml
docs/: configuration-guide.md  pads-and-actions.md
resources/: log.toml  settings.json  settings.styling.json
resources/schemas/: components.schema  definitions.schema  settings.schema
resources/windres/: resources.rc
src/: main.rs
src/app/: action_executor.rs  action_factory.rs  app.rs  board_factory.rs  board_manager.rs  hook.rs  message.rs  mod.rs  settings.rs
src/app/windows/: board.rs  main.rs  mod.rs  tray.rs
src/components/: board_chain.rs  boards.rs  colors_board.rs  controls.rs  fonts_board.rs  home_board.rs  main_board.rs  mod.rs  result_helpers.rs  settings_board.rs  state_machine.rs  traits.rs
src/core/: data.rs  integration.rs  mod.rs  repository.rs  resources.rs
src/framework/: app_registry.rs  mod.rs  router.rs  traits.rs
src/input/: api.rs  capture.rs  mod.rs  script.rs  steps.rs
src/input/keys/: ckey.rs  mod.rs  vkey.rs
src/model/: data.rs  handle.rs  mod.rs  traits.rs
src/settings/: mod.rs  persistence.rs  settings.rs  validation.rs
src/ui/: mod.rs
src/ui/components/: assets.rs  mod.rs  painter.rs  png.rs  svg.rs  tray.rs
src/ui/dialogs/: capture_dialog.rs  chain_editor.rs  color_picker.rs  font_selector.rs  mod.rs  pad_editor.rs
src/ui/shared/: layout.rs  mod.rs  utils.rs
src/ui/windows/: board.rs  main.rs  mod.rs
