[package]
name = "hotkeys"
version = "0.2.0"
edition = "2021"
description = "Global Shortcuts for Windows."
authors = [ "Ivica Kukic <ivicakukic@gmail.com>" ]
repository = "https://github.com/ivicakukic/hotkeys-win.git"
homepage = "https://github.com/ivicakukic/hotkeys-win"
documentation = "https://github.com/ivicakukic/hotkeys-win/blob/main/README.md"
readme = "README.md"
keywords = ["Shortcut", "Key", "Windows"]
license = "MIT"

build = "build.rs"
publish = false

[build-dependencies]
windres = "*"
winres = "*"
winapi = "*"
toml = "0.8"

[dependencies]
log = "0.4.17"
log4rs = { version = "1.1.1", features = ["toml_format"] }
tray-item = "0.10.0"
paste = "1.0.9"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
resvg = "0.45.1"
once_cell = "1.21.3"
image = "0.24"
open = "5.3.2"
num-traits = "0.2.19"
clipboard-win = "5.4.1"

[dev-dependencies]
tempfile = "3.0"

[dependencies.windows]
version = "0.61.3"
features = [
    # "Foundation_Collections",
    "Foundation_Numerics",
    "Graphics",
    "System",
    # "UI_Composition_Desktop",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    # "Win32_System_WinRT",
    # "Win32_System_WinRT_Composition",
    "Win32_UI_Controls",
    "Win32_UI_Controls_Dialogs",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
]

[[bin]]
name = "hotkeys"
path = "src/main.rs"
#edition = "2021"


[package.metadata.winres]
OriginalFilename = "hotkeys.exe"
FileDescription = "Global Shortcuts for Windows ⌨"
LegalCopyright = "Copyright © 2022"
